--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "typescript": "5.1.6"
-  }
+  },
+  "packageManager": "yarn@4.6.0"
 }
